--- a/style.css
+++ b/style.css
@@ -1,41 +1,65 @@
 body {
     text-align: center;
-    /*background:   url("https://cdn.pixabay.com/photo/2016/06/13/05/47/background-1453697_1280.jpg");*/
 }
 
 .nameMain {
     font-size: 70px;
     margin: 0.2em;
     font-family: 'Berkshire Swash', cursive;
+    text-align: right;
 }
 
-.nameChoose {
-    margin: 0.5em 0 0.25em;
-}
-
-table,
-tr,
-td {
+#pixelCanvas,
+.mainTool {
     border: 1px solid black;
+    padding: 0;
 }
 
-#pixel_canvas {
+#pixelCanvas {
     border-collapse: collapse;
     margin: 0 auto;
+    background-color: white;
+}
+.row,
+.cell {
+    padding: 0;
 }
 
-tr {
-    height: 20px;
+.row {
+    height: 10px;
 }
 
-td {
-    width: 20px;
+.cell {
+    width: 10px;
 }
 
-input {
+.sizeVal {
     width: 6em;
 }
 
-input[type=color] {
-  margin-bottom: 2em;
+#colorPicker {
+  width: 1.2em;
+  height: 1.5em;
+}
+
+.labels {
+    margin-right: 1em;
+}
+
+.tool {
+    display: inline-block;
+    margin: 0 2em;
+    border-radius: 2px;
+    background-color: rgb(239, 239, 239);
+}
+
+.mainTool {
+    text-align: left;
+    width: 100%;
+    border-radius: 5px;
+}
+.frameCanvas {
+    border: 2px solid grey;
+    padding: 5px;
+    background-color: grey;
 }
