--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     text-align: center;
+    background-color: #282828;
 }
 
 .nameMain {
-    font-size: 2em;
+    font-size: 1.6em;
     margin: 0.2em;
     font-family: 'Berkshire Swash', cursive;
     text-align: right;
+    color: silver;
 }
 
 .frameApp,
@@ -15,9 +17,6 @@ body {
     padding: 0;
 }
 
-.mainTool {
-    border-bottom: 1px solid black;
-}
 #pixelCanvas {
     border-collapse: collapse;
     margin: 0 auto;
@@ -47,22 +46,28 @@ body {
 
 .labels {
     margin-right: 1em;
+    color: #FFF;
 }
 
 .tool {
     display: inline-block;
-    margin: 0 2em;
-    border-radius: 2px;
-    
+    margin: 0 2em;   
 }
 
 .mainTool {
     text-align: left;
     width: 100%;
-    background-color: rgb(239, 239, 239);
+    background-color: #3B3B3B;
+    border-bottom: 1px solid black;
 }
-.frameCanvas {
-    border: 2px solid grey;
+.frameCanvas {    
     padding: 5px;
-    background-color: grey;
+    background-color: grey;    
+}
+.frameApp {
+    border-radius: 5px;
+    border: 2px solid grey;
+}
+#author {
+    color:silver;
 }
